--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "mkdirp": "^0.5.1",
     "ml-array-mean": "^1.0.1",
     "ml-distance": "^2.1.1",
+    "ml-kmeans": "^3.0.0",
     "mrz": "^1.0.0",
     "papaparse": "^4.3.6",
     "tableify": "^1.1.0"
